アドベント用

--- a/doc/typestring/17_at.md
+++ b/doc/typestring/17_at.md
@@ -12,7 +12,7 @@ char s->at(STRING* self, size_t pos);
 
 ## 説明
 
-メンバ関数`at()`は、`self`のメンバ変数`self->string`から、指定位置`pos`の要素を取得する。
+メンバ関数`at()`は、`self`が管理する文字列から、指定位置`pos`の要素を取得する。
 返却する値は要素の複製であり、要素への参照でない。
 
 指定位置`pos`として有効な値は、現在の領域内に限られる。
